--- a/css/page_impt_blank1.css
+++ b/css/page_impt_blank1.css
@@ -8054,8 +8054,8 @@ a>.e_title.w_btn-002 .p_link:active {
 }
 
 #w_rbox-1576115387523 >div>.p_rbox {
-	background-image: url(/img/jgbj.jpg);
-	background-image-part-image: url(/img/jgbj.jpg);
+	background-image: url(../images/jgbj.jpg);
+	background-image-part-image: url(../images/jgbj.jpg);
 }
 
 #w_rbox-1576746735717 .p_MatteIcon .iconfont:before {
@@ -8075,8 +8075,8 @@ a>.e_title.w_btn-002 .p_link:active {
 }
 
 #w_wbox-1576117523897 .p_wbox {
-	background-image: url(/img/ht.jpg);
-	background-image-part-image: url(/img/ht.jpg);
+	background-image: url(../images/ht.jpg);
+	background-image-part-image: url(../images/ht.jpg);
 }
 
 #w_wbox-1576117523897 .p_MatteIcon .iconfont:before {
